# Camera-Pose-In-ros

./: README.md  read_me.md
hands_on_precption/: CMakeLists.txt  package.xml
hands_on_precption/launch/: hop.launch
hands_on_precption/src/: CameraPose.py  controller.py  deadReckoning_node.py  marker.py
project/: Generate.py  K_matrix.npy  board_generation.py  bundleadjustment.py  calibration_ChAruco.py  callibrate.py  cameraPose.py  detect_aruco_video.py  distortion.npy
