<package format="2">
  <name>hands_on_precption</name>
  <version>2.0.0</version>
  <description>
     hands_on_precption package
  </description>
  <author></author>
  <maintainer email="sazidarnob@gmail.com">sazidarnob</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
</package>